feat: pet type feature
