# app/Http/Requests/PetType/CreatePetTypeRequest.php
@@ -1,0 +1,40 @@
+<?php
+
+namespace App\Http\Requests\PetType;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+/**
+ * @OA\Schema(
+ *     required={"image", "name", "type"},
+ *     @OA\Property(property="image", type="string", example="Link"),
+ *     @OA\Property(property="type", type="number", example="cat"),
+ *     @OA\Property(property="name", type="number", example="Americal curl")
+ * )
+ */
+
+class CreatePetTypeRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            //
+            'image' => ['required'],
+            'type' => ['required'],
+            'name' => ['required']
+        ];
+    }
+}
